Structured Information Tab in HTML

--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
                 </div>
             </div>
         </div>
+        <div class="info-container">
+            <h2>Some Random Information</h2>
+            <div class="info-contents">
+                <div class="info-1">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-2">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-3">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-4">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
