--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                 -Thor, God of Thunder
             </div>
         </div>
+        <div class="signup-container">
+            <div class="signup-main">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
     </div>
 </body>
 </html>
