--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             </div>
             <button>Sign up</button>
         </div>
+        <div class="footer">
+            Copyright © The Odin Project 2021
+        </div>
     </div>
 </body>
 </html>
