--- a/index.html
+++ b/index.html
@@ -7,72 +7,73 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="contents">
-        <div class="header">
-            <div class="nav-bar">
-                <h2>Header Logo</h2>
-                <div class="headerLink-container">
-                    <a href="#" target="_blank" class="header-links">header link one</a>
-                    <a href="#" target="_blank" class="header-links">header link two</a>
-                    <a href="#" target="_blank" class="header-links">header link three</a>
-                </div>
+    <header>
+        <div class="nav-bar">
+            <div class="headerLogo-container">
+                <h2 class="header-logo">Header Logo</h2>
             </div>
-            <div class="header-main">
-                <div class="header-contents">
-                    <h1>This Website is Awesome</h1>
-                    <p>
-                        This website has some subtext that goes here under the main title. 
-                        It's a smaller font and the color is lower contrast
-                    </p>
-                    <button>Sign up</button>
-                </div>
-                <div class="header-img">
-                    <!-- <img src="#"> -->
-                    <p>This is a placeholder for an image.</p>
+            <div class="headerLink-container">
+                <a href="#" target="_blank" class="header-links">header link one</a>
+                <a href="#" target="_blank" class="header-links">header link two</a>
+                <a href="#" target="_blank" class="header-links">header link three</a>
+            </div>
+        </div>
+        <div class="header-main">
+            <div class="header-contents">
+                <h1 class="header-title">This website is awesome</h1>
+                <p class="header-paragraph">
+                    This website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast.
+                </p>
+                <button class="header-btn">Sign up</button>
+            </div>
+            <div class="img-container">
+                <div class="img-main">
+                    <p class="header-img">this is a placeholder for an image.</p>
                 </div>
             </div>
         </div>
-        <div class="info-container">
-            <h2>Some Random Information</h2>
-            <div class="info-contents">
-                <div class="info-1">
-                    <div></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="info-2">
-                    <div></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="info-3">
-                    <div></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="info-4">
-                    <div></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
+    </header>
+    <div class="info-container">
+        <h2 class="info-title">Some Random Information.</h2>
+        <div class="info-contents">
+            <div class="info">
+                <div class="frame"></div>
+                <p class="pInfo">this is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div class="quote-container">
-            <div class="main-quote">
-                This is an inspiring quote, or a testimonial from a customer. 
-                Maybe it's just filling up space, or maybe people will actually read it. 
-                Who knows? All I know is that it looks nice.
+            <div class="info">
+                <div class="frame"></div>
+                <p class="pInfo">this is some subtext under an illustration or image</p>
             </div>
-            <div class="quote-owner">
-                -Thor, God of Thunder
+            <div class="info">
+                <div class="frame"></div>
+                <p class="pInfo">this is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div class="signup-container">
-            <div class="signup-main">
-                <h2>Call to action! It's time!</h2>
-                <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="info">
+                <div class="frame"></div>
+                <p class="pInfo">this is some subtext under an illustration or image</p>
             </div>
-            <button>Sign up</button>
-        </div>
-        <div class="footer">
-            Copyright © The Odin Project 2021
         </div>
     </div>
+    <div class="quote-container">
+        <div class="main-quote">
+            This is an inspiring quote, or a testimonial from a customer. 
+            Maybe it's just filling up space, or maybe people will actually read it. 
+            Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quote-owner">
+            -Thor, God of Thunder
+        </div>
+    </div>
+    <div class="signup-container">
+        <div class="signup-main">
+            <h2>Call to action! It's time!</h2>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <footer>
+        Copyright © The Odin Project 2021
+    </footer>
 </body>
 </html>
