--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
         </div>
     </div>
     <div class="signup-container">
-        <div class="signup-main">
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="signup-box">
+            <div class="signup-main">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="signup-btn">Sign up</button>
         </div>
-        <button>Sign up</button>
     </div>
     <footer>
         Copyright © The Odin Project 2021
